remove kotlin & twf

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexander-ahappydandelion/TWF-scaled-game.git"
+    "url": "git+https://github.com/titovtima/Scannon.git"
   },
   "keywords": [
     "TWF",
